Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ If you have more than a few, handling your bookmarks with the built-in manager c
 <a id="you-like-it--make-it-better-" class="anchor" href="#you-like-it--make-it-better-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You like it ? Make it better !</h2>
 
 <ul>
-<li>Post issues, blames, praises, pieces of advices, wishes</li>
+<li>
+<a href="https://github.com/EricViala/Skwares/issues">Post issues</a>, blames, praises, pieces of advices, wishes ...</li>
 <li>Enroll as a contributor (see TODO.txt)</li>
 <li>Donations will help me take time off my day job and take Skwares further</li>
 </ul>
@@ -63,7 +64,9 @@ If you have more than a few, handling your bookmarks with the built-in manager c
 <h2>
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install</h2>
 
-<p>Not packaged yet, I'm working on it. You'll need to grab your own copy of jQuery, jQuery UI and jquery-context-menu.</p>
+<p><a href="https://chrome.google.com/webstore/detail/skwares/koepapmllfahhfimhhkgfihkjgkndiog?utm_source=chrome-app-launcher-info-dialog">Stable version</a> in Google Chrome Webstore.</p>
+
+<p>To run this version, you'll need to grab your own copy of jQuery, jQuery UI and jquery-context-menu and put all the things where they belong, see INSTALL.md</p>
 
 <h1>
 <a id="help-appreciated" class="anchor" href="#help-appreciated" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Help appreciated</h1>
