--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@ If you have more than a few, handling your bookmarks with the built-in manager c
 <li>
 <a href="https://github.com/EricViala/Skwares/issues">Post issues</a>, blames, praises, pieces of advices, wishes ...</li>
 <li>Enroll as a contributor (see TODO.txt)</li>
-<li>Donations will help me take time off my day job and take Skwares further</li>
 </ul>
 
 <h2>
@@ -66,7 +65,7 @@ If you have more than a few, handling your bookmarks with the built-in manager c
 
 <p><a href="https://chrome.google.com/webstore/detail/skwares/koepapmllfahhfimhhkgfihkjgkndiog?utm_source=chrome-app-launcher-info-dialog">Stable version</a> in Google Chrome Webstore.</p>
 
-<p>To run this version, you'll need to grab your own copy of jQuery, jQuery UI and jquery-context-menu and put all the things where they belong, see INSTALL.md</p>
+<p>To run from this GitHub repo, you'll need to grab your own copy of jQuery, jQuery UI and jquery-context-menu and put all the things where they belong, see INSTALL.md</p>
 
 <h1>
 <a id="help-appreciated" class="anchor" href="#help-appreciated" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Help appreciated</h1>
