Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ If you have more than a few, handling your bookmarks with the built-in manager c
 
 <p>Skwares to the rescue !</p>
 
-<p><img src="https://lh3.googleusercontent.com/v_un8EDI-l47IXT9Yh8IoiQw67hcWFB4yDfXnrBvGLfJ0hIrUIJl2MAdK-WnPKivqAcRTL1NPA=s640-h400-e365-rw" alt="Organize your bookmarks"></p>
+<p><img src="http://i.imgur.com/a97FfNE.png" alt="Organize your bookmarks"></p>
 
 <p>And oh, it'd pronounced like "squares", of course, because your bookmarks are now shown as big square icons ;)</p>
 
